package ar.edu.unlam.mobile.scaffolding.ui.screens

enum class Routes {
    Home,
    Awards,
    ActivityProgressScreen,
    RegisterScreen,
    RouteHistory,
}
