...
            photoCaptureViewModel.setPermissionGranted(true)
        }
    }

    fun handleContinueButtonClick() {
        if (name == "" || lastName == "" || weight == "" || height == "" || age == "") {
            Toast.makeText(context, "Todos los datos son obligatorios!", Toast.LENGTH_SHORT).show()
            return
        }
        val user =
            User(
                1,
                name,
...
